--- a/sample-packages/npm/package.json
+++ b/sample-packages/npm/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "sanaraya_package",
-  "description": "",
-  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
